# reticulum-meshchatX

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO.md  cx_setup.py  database.py  docker-compose.yml  meshchat.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  vite.config.js
.github/workflows/: bearer-pr.yml  bearer.yml  build.yml  dependency-review.yml
electron/: main.js
meshchatx/: __init__.py  database.py  meshchat.py
meshchatx/src/: version.py
meshchatx/src/backend/: __init__.py  announce_handler.py  async_utils.py  audio_call_manager.py  interface_config_parser.py  interface_editor.py
meshchatx/src/backend/interfaces/: WebsocketClientInterface.py  WebsocketServerInterface.py  __init__.py
meshchatx/src/frontend/: call.html  call.js
scripts/: build-backend.js  move_wheels.py  prepare_frontend_dir.py  rename_legacy_artifacts.sh  sync_version.py  test_wheel.sh
src/: __init__.py
src/backend/: announce_handler.py  audio_call_manager.py  colour_utils.py  interface_config_parser.py  lxmf_message_fields.py
src/backend/interfaces/: WebsocketClientInterface.py  WebsocketServerInterface.py
src/frontend/: index.html  main.js  style.css
src/frontend/components/: App.vue  IconButton.vue
src/frontend/components/about/: AboutPage.vue
src/frontend/components/interfaces/: Interface.vue
src/frontend/components/messages/: AddAudioButton.vue  AddImageButton.vue  ConversationViewer.vue  MessagesPage.vue  MessagesSidebar.vue  SendMessageButton.vue
src/frontend/js/: Codec2Loader.js  Utils.js
(+16 files in other folders)
