[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

[project]
name = "reticulum-meshchatx"
dynamic = ["version"]
description = "A simple mesh network communications app powered by the Reticulum Network Stack"
readme = "README.md"
authors = [
  {name = "Sudo-Ivan"}
]
license = "MIT"
keywords = ["reticulum", "meshchat", "lxmf", "rns"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.13.2",
  "lxmf>=0.9.3",
  "peewee>=3.18.3",
  "psutil>=7.1.3",
  "rns>=1.0.4",
  "websockets>=15.0.1",
]

[project.scripts]
meshchat = "meshchatx.meshchat:main"

[tool.poetry]
version = "2.50.0"
packages = [{include = "meshchatx"}]

[tool.poetry.group.dev.dependencies]
cx-freeze = ">=7.0.0"

[[tool.poetry.include]]
path = "logo"

